<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.lxtreme.ols</groupId>
	<artifactId>parent</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>
	<name>OLS Reactor POM</name>
	<developers>
    <developer>
			<id>fbarriga</id>
			<name>Felipe Barriga Richards</name>
			<email>felipe@felipebarriga.cl</email>
		</developer>
	</developers>
	<licenses>
		<license>
			<name>GNU General Public License v2</name>
			<url>http://www.gnu.org/licenses/old-licenses/gpl-2.0.html</url>
		</license>
	</licenses>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<ols.version>0.9.8</ols.version>
	</properties>
	<prerequisites>
		<maven>3.13.0</maven>
	</prerequisites>
	<modules>
		<module>lib.mydoggy</module>
		<module>lib.jserialcomm</module>
		<module>lib.jvt220</module>
		<module>lib.flatlaf</module>
		<module>api</module>
		<module>util</module>
		<module>test.util</module>
		<module>logging</module>
		<module>service.config</module>
		<module>service.io</module>
		<module>service.acquisition</module>
		<module>service.taskexecution</module>
		<module>client</module>
		<module>client.project</module>
		<module>device.test</module>
		<module>device.generic</module>
		<module>device.logicsniffer</module>
		<module>tool.base</module>
		<module>tool.1wire</module>
		<module>tool.asm45</module>
		<module>tool.i2c</module>
		<module>tool.jtag</module>
		<module>tool.spi</module>
		<module>tool.state</module>
		<module>tool.uart</module>
		<module>tool.dmx512</module>
		<module>tool.linedecoder</module>
		<module>tool.serialconsole</module>
		<module>export.image</module>
		<module>export.vcd</module>
		<module>export.csv</module>
		<module>runner</module>
		<!-- main distribution -->
		<module>ols.distribution</module>
	</modules>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*.properties</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.0</version>
				<inherited>true</inherited>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.0.0</version>
				<inherited>true</inherited>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
				<inherited>true</inherited>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>2.5.2</version>
				<inherited>true</inherited>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.6</version>
				<inherited>true</inherited>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.10</version>
				<inherited>true</inherited>
				<configuration>
					<addGroupIdToProjectName>true</addGroupIdToProjectName>
					<limitProjectReferencesToWorkspace>true</limitProjectReferencesToWorkspace>
					<downloadJavadocs>false</downloadJavadocs>
					<downloadSources>false</downloadSources>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
				<inherited>true</inherited>
				<!-- use Ant 1.8.2 *explicitly* to ensure we've got the version that
					supports 'cutdirsmapper' -->
				<dependencies>
					<dependency>
						<groupId>org.apache.ant</groupId>
						<artifactId>ant</artifactId>
						<version>1.8.2</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>5.1.9</version>
				<inherited>true</inherited>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<inherited>true</inherited>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.2</version>
				<inherited>true</inherited>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.21.0</version>
				<inherited>true</inherited>
				<configuration>
					<forkMode>once</forkMode>
					<argLine>
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.desktop/java.awt=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
                <configuration>
                    <quiet/>
                </configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
        <profile>
            <id>jdk8-javadoc</id>
            <activation>
                <jdk>[17,)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.2.0</version>
                        <configuration>
                            <quiet/>
                            <doclint>none</doclint>
                            <source>17</source>
                            <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                        </configuration>
						<executions>
							<execution>
								<id>main-javadoc</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<release>17</release>
								</configuration>
							</execution>
						</executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
		<profile>
			<id>componentTest</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<inherited>true</inherited>
						<configuration>
							<reportsDirectory>${project.build.directory}/surefire-reports/</reportsDirectory>
							<argLine>${additional.test.argLine}</argLine>
							<forkMode>once</forkMode>
							<includes>
								<include>**/*Test.java</include>
							</includes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>runner</artifactId>
				<version>1.1.1</version>
			</dependency>

			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>api</artifactId>
				<version>1.0.5</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>lib.mydoggy</artifactId>
				<version>1.5.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>lib.jserialcomm</artifactId>
				<version>2.10.4</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>lib.jvt220</artifactId>
				<version>1.3.3</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>lib.flatlaf</artifactId>
				<version>3.4.1</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>client</artifactId>
				<version>1.2.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.client</groupId>
				<artifactId>client.project</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>logging</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>service.config</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>service.io</artifactId>
				<version>1.0.1</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>service.acquisition</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>service.taskexecution</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>util</artifactId>
				<version>1.1.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols</groupId>
				<artifactId>test.util</artifactId>
				<version>1.1.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.device</groupId>
				<artifactId>test</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.device</groupId>
				<artifactId>generic</artifactId>
				<version>1.1.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.device</groupId>
				<artifactId>logicsniffer</artifactId>
				<version>1.1.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.tool</groupId>
				<artifactId>base</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.tool</groupId>
				<artifactId>i2c</artifactId>
				<version>1.0.1</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.tool</groupId>
				<artifactId>spi</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.tool</groupId>
				<artifactId>state</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.tool</groupId>
				<artifactId>uart</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.tool</groupId>
				<artifactId>dmx512</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.tool</groupId>
				<artifactId>linedecoder</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.tool</groupId>
				<artifactId>1wire</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.tool</groupId>
				<artifactId>jtag</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.tool</groupId>
				<artifactId>asm45</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.tool</groupId>
				<artifactId>serialconsole</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.export</groupId>
				<artifactId>image</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.export</groupId>
				<artifactId>vcd</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>nl.lxtreme.ols.export</groupId>
				<artifactId>csv</artifactId>
				<version>1.0.0</version>
			</dependency>

			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>osgi.core</artifactId>
				<version>7.0.0</version>
			</dependency>
			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>osgi.cmpn</artifactId>
				<version>6.0.0</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.apache.felix</groupId>
				<artifactId>org.apache.felix.main</artifactId>
				<version>7.0.5</version>
			</dependency>
			<dependency>
				<groupId>org.apache.felix</groupId>
				<artifactId>org.apache.felix.prefs</artifactId>
				<version>1.1.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.felix</groupId>
				<artifactId>org.apache.felix.log</artifactId>
				<version>1.3.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.felix</groupId>
				<artifactId>org.apache.felix.metatype</artifactId>
				<version>1.2.4</version>
			</dependency>
			<dependency>
				<groupId>org.apache.felix</groupId>
				<artifactId>org.apache.felix.fileinstall</artifactId>
				<version>3.7.4</version>
			</dependency>
			<dependency>
				<groupId>org.apache.felix</groupId>
				<artifactId>org.apache.felix.configadmin</artifactId>
				<version>1.9.26</version>
			</dependency>
			<dependency>
				<groupId>org.apache.felix</groupId>
				<artifactId>org.apache.felix.dependencymanager</artifactId>
				<version>4.6.1</version>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.2</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>2.0.2-beta</version>
			</dependency>

			<dependency>
				<groupId>net.sourceforge.mydoggy</groupId>
				<artifactId>mydoggy-api</artifactId>
				<version>1.5.0-beta-r1389</version>
			</dependency>
			<dependency>
				<groupId>net.sourceforge.mydoggy</groupId>
				<artifactId>mydoggy-plaf</artifactId>
				<version>1.5.0-beta-r1389</version>
			</dependency>
			<dependency>
				<groupId>net.sourceforge.mydoggy</groupId>
				<artifactId>mydoggy-res</artifactId>
				<version>1.5.0-beta-r1389</version>
			</dependency>
			<dependency>
				<groupId>tablelayout</groupId>
				<artifactId>TableLayout</artifactId>
				<version>20050920</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
